--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,104 @@
-* {
-  font-family: 'Rubik',sans-serif;
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-  padding: 0 60px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 
-.titulo-900{
-  font-size: 35px;
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+/* Centrar contenido de la página */
+.container{
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+/* Titulo de la app */
+.title-app {
+  text-align: center;
   font-weight: 900;
+}
+@media (min-width: 480px){
+  .title-app{
+    text-align: left;
+  }
+}
+.title-app span{
+  color: #037bc0;
+}
+
+/* Buscador de gifs */
+.form{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid #037bc0;
+  margin: auto 2rem;
+}
+@media (min-width: 480px){
+  .form{
+    margin: 0;
+  }
+}
+.searchs {
+  color: #546E7A;
+  font-size: 2rem;
+  padding: 1rem;
+  margin: 0 auto;
+  width: 100%;
+  border: 1px solid #F8C1FF;
+}
+.searchs:focus {
+  outline: none;
+  border: 1px solid #F8C1FF;
+}
+
+/* Mensaje loading */
+.loading{
+  font-weight: 900;
+  font-size: 4rem;
 }
 .tamano{
   text-transform: uppercase;
   color: #546E7A;
   font-weight: 700;
 }
-.carga-centro{
-  font-size: 30px;
-  font-weight: 900;
-}
 
-input {
-  color: grey;
-  font-size: 1.2rem;
-  padding: 10px;
-  width: 100%;
-}
-input:focus{
-  outline: none;
+
+/* Contenedor de resultados */
+.card-container{
+  padding: 0 4rem;
 }
 
 .card-grid {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 10px;
+  display: flex;
+  flex-direction: column;
 }
 @media (min-width: 480px){
   .card-grid{
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
   }
 }
 @media (min-width: 980px){
@@ -46,9 +107,10 @@ input:focus{
   }
 }
 
+/* Grid de gifs */
 .card {
   align-content: center;
-  border: 1px solid #424242;
+  border: 1px solid #F8C1FF;
   border-radius: 6px;
   margin-bottom: 10px;
   margin-right: 10px;
@@ -61,21 +123,15 @@ input:focus{
   padding: 5px;
   text-align: center;
   font-weight: 400;
-  font-size: 14px;
-}
-
-@media (min-width: 480px) {
-  .card p {
-    font-size: 14px;
-  }
+  font-size: 16px;
+  color: #546E7A;
 }
 
 @media (min-width: 980px) {
   .card p {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
-
 
 .card img {
   width: 100%;
